# pyplotstyling

./: README.md  pyproject.toml
pyplotstyling/: __init__.py  colorscales.py
pyplotstyling/matplotlib/: pps_white_grid.mplstyle  pps_white_grid.mstyle
pyplotstyling/mpl/: pps_white_grid.mplstyle
pyplotstyling/plotly/: __init__.py  white_grid.py
